alignment fixed

--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 768px) {
+  .dashboard-content {
+    height: calc(100vh - 215px);
+  }
   .dashboard-nav-item {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -9,6 +12,7 @@
   }
   .side-bar {
     display: none;
+    transition: all .5s linear;
   }
   .responsive-toggle {
     display: block;
